= 0.9.1 =
* minified customizer script
* ready for translation

= 0.9 =
* swapped slimbox for swipebox due to slim box not being responsive by default
* added clean arg for post author that outputs with no markup
* added BS modal to core js file
* added BS transition to core js file
* removed comment toggle from article share
* added external link icon font awesome
* added select2 to CMB (needs them)
* added new soren_color_sync() function to provide PHP color automation when LESS color automation isn’t feasible, like posts
* fixed broken schema tag
* added sidebar.php needs this duh
* added new $postedby arg to soren_post_author
* added new $lum arg to soren_color_sync() to control luminosity break point
* added home icon from font awesome

= 0.8 =
* Added angle up and angle down icons
* added parallax to core
* added image lightbox to core
* added scrollnav js to core
* added search plus icon
* added waypoints to core
* added fitvids to core

= 0.7 =
* since changelog was tracked